tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_15.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := (((- (0 DIV x)) + ((z MOD 0) MOD (z - 1))) < (((200 DIV 200) DIV (y MOD y)) + ((0 - y) DIV (2 - 1))));
               z := ((- ((- 2) MOD (y + 0))) MOD (+ ((+ 2) DIV (+ 2))));
               x := (+ (((2 + 2) - (1 + 1)) MOD ((200 DIV 0) MOD (y MOD 0))));
               x := (- (- ((0 * 1223) DIV (1223 MOD 200))));
               p := ((((y - z) + (1 MOD y)) * ((2 DIV x) * (- 1223))) <= ((+ (+ y)) - ((y MOD 200) MOD (z DIV 1223))));
               z := ((((y - x) + (- y)) MOD ((0 - x) MOD (- z))) - (((0 - y) + (y - x)) MOD (- (0 - 1223))));
               q := ((((- x) + (2 DIV y)) > ((2 - x) * (x * 0))) OR (((x + 0) DIV (y DIV y)) # ((200 * z) * (+ 2))));
               x := ((((0 * x) + (- 2)) - (+ (200 - y))) MOD (((1 * 200) - (2 + z)) MOD ((2 MOD 1) MOD (0 - 1))));
               p := ((~ ((2 MOD 2) > (- y))) OR (((0 MOD 200) DIV (2 - x)) # (- (200 - 1))));
  (* error *)  x := (((- (q + 200)) DIV ((1223 + 1223) - (+ y))) MOD ((- (- z)) + (- (y MOD 2))))
END Test20.